Updating DaemonTest